[package]
name = "cmd-proc-macro"
version = "0.1.2"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = ""
license = "MIT"
repository = "https://github.com/hangj/cmd-proc-macro"
documentation = "https://docs.rs/cmd-proc-macro/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = { version = "2.0.20", features = ["full"] }
